--- a/www/index.html
+++ b/www/index.html
@@ -6,7 +6,6 @@
         rel="stylesheet">
 </head>
 <body>
-  <h1>Welcome to a Static Site with Data from an Express API</h1>
   <h2>Deployed with <a href="https://zeit.co/docs"
      rel="noreferrer noopener"
      target="_blank">ZEIT Now</a>!</h2>
@@ -14,7 +13,7 @@
      rel="noreferrer noopener"
      target="_blank">This project</a> includes three files. A static <code>www/index.html</code> (rewritten with <a href="https://zeit.co/docs/v2/deployments/routes/"
      rel="noreferrer noopener"
-     target="_blank">Routes</a> for access from the root) file as the homepage, a static <code>www/style.css</code> file for styling, and a <code>api/date.js</code> serverless function that returns the date on invocation. See <a href=
+     target="_blank">Routes</a> for access from the root) file as the homepage, a static <code>www/style.css</code> file for styling, and a <code>api/date</code> serverless function that returns the date on invocation. See <a href=
      "/api/_support/date.js"><code>api/date.js</code> for the Date API with Express</a>.</p><br>
   <h3>The date according to Express is:</h3>
   <p class="date js-date">Loading date...</p>
