--- a/www/index.html
+++ b/www/index.html
@@ -1,33 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>A simple deployment with the Now API!</title>
-  <link href="/www/style.css"
-        rel="stylesheet">
+    <title>Serverless with now</title>
+    <link href="/www/style.css" rel="stylesheet">
 </head>
+
 <body>
-  <h2>Deployed with <a href="https://zeit.co/docs"
-     rel="noreferrer noopener"
-     target="_blank">ZEIT Now</a>!</h2>
-  <p><a href="https://github.com/zeit/now-examples/blob/master/express"
-     rel="noreferrer noopener"
-     target="_blank">This project</a> includes three files. A static <code>www/index.html</code> (rewritten with <a href="https://zeit.co/docs/v2/deployments/routes/"
-     rel="noreferrer noopener"
-     target="_blank">Routes</a> for access from the root) file as the homepage, a static <code>www/style.css</code> file for styling, and a <code>api/date</code> serverless function that returns the date on invocation. See <a href=
-     "/api/_support/date.js"><code>api/date.js</code> for the Date API with Express</a>.</p><br>
-  <h3>The date according to Express is:</h3>
-  <p class="date js-date">Loading date...</p>
-  <script>
-        function main() {
-            return fetch('/api/date')
-                .then(function(response) {
-                    return response.text();
-                })
-                .then(function(date) {
-                    document.querySelector('.js-date').textContent = date;
-                });
-        }
-        main();
-  </script>
+    <h2>
+        Serverless API controll app
+    </h2>
+    <p class="date js-date">Loading date...</p>
+    <p>if Date is showing then API is running</p>
+    <a href="www/sqlsnippettest.html">
+        <button>Code Snippet test Page</button></a>
+    <script src="www/js/date.js">
+    </script>
 </body>
+
 </html>
