upated data api

--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,7 @@
     </div>
     <a href="www/sqlsnippettest.html">
         <button>Code Snippet test Page</button></a>
+    <button>Test mongoApi</button>
     <script src="www/js/browser-request.js"></script>
     <script src="www/js/server-info.js"></script>
 </body>
